--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <canvas id="canvas" width="600" height="700"></canvas>
     <script type="text/javascript" src="background.js"></script>
     <script type="text/javascript" src="player.js"></script>
-    <script type="text/javascript" src="platform.js"></script>
+    <script type="text/javascript" src="platform2.js"></script>
     <script type="text/javascript" src="script.js"></script>
   </div>
 </body>
