--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <script type="text/javascript" src="player.js"></script>
     <script type="text/javascript" src="platform3.js"></script>
     <script type="text/javascript" src="obstacle.js"></script>
+    <script type="text/javascript" src="gameover.js"></script>
+    <script type="text/javascript" src="score.js"></script>
     <!--<script type="text/javascript" src="points.js"></script>-->
     <script type="text/javascript" src="script.js"></script>
   </div>
