--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <canvas id="canvas" width="600" height="700"></canvas>
     <script type="text/javascript" src="background.js"></script>
     <script type="text/javascript" src="player.js"></script>
-    <script type="text/javascript" src="platform3.js"></script>
+    <script type="text/javascript" src="platform.js"></script>
     <script type="text/javascript" src="obstacle.js"></script>
     <script type="text/javascript" src="gameover.js"></script>
     <script type="text/javascript" src="score.js"></script>
-    <!--<script type="text/javascript" src="points.js"></script>-->
+    <script type="text/javascript" src="candies.js"></script>
     <script type="text/javascript" src="script.js"></script>
   </div>
 </body>
