--- a/index.html
+++ b/index.html
@@ -6,19 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="style.css">
   <title>Majump Boo</title>
+  
 </head>
 <body>
-  <button id="start-button">StartGame</button>
-  <div id="game-board">
-    <canvas id="canvas" width="600" height="700"></canvas>
-    <script type="text/javascript" src="background.js"></script>
-    <script type="text/javascript" src="player.js"></script>
-    <script type="text/javascript" src="platform.js"></script>
-    <script type="text/javascript" src="obstacle.js"></script>
-    <script type="text/javascript" src="gameover.js"></script>
-    <script type="text/javascript" src="score.js"></script>
-    <script type="text/javascript" src="candies.js"></script>
-    <script type="text/javascript" src="script.js"></script>
-  </div>
+    <h1>Majump Boo</h1>
+    <a href="game.html">StartGame</a>
 </body>
 </html>
