--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
   <title>Majump Boo</title>
   
 </head>
-<body>
+<body id="cover">
     <h1>Majump Boo</h1>
+    <p>Majin Boo ha convertido a todos los namekianos en pastelitos!<br> Ayúdale a comerse tantos como pueda antes de que el planeta se derrumbe.<br>
+      Cuidado! No todas las plataformas aguantarán el peso de Majin Boo dos veces seguidas...</p>
+    <p>Muévete hacia la izquierda/derecha con las flechas del teclado.<br>
+    <p>Cada plataforma saltada da 1 punto, y cada pastelito 5 puntos!</p>
     <a href="game.html">StartGame</a>
 </body>
 </html>
