--- a/game.html
+++ b/game.html
@@ -8,18 +8,18 @@
   <title>Majump Boo</title>
 </head>
 <body>
-  <button id="start-button">StartGame</button>
   <div id="game-board">
-    <canvas id="canvas" width="600" height="700"></canvas>
-    <script type="text/javascript" src="background.js"></script>
-    <script type="text/javascript" src="player.js"></script>
-    <script type="text/javascript" src="platform.js"></script>
-    <script type="text/javascript" src="obstacle.js"></script>
-    <script type="text/javascript" src="gameover.js"></script>
-    <script type="text/javascript" src="score.js"></script>
-    <script type="text/javascript" src="candies.js"></script>
-    <script type="text/javascript" src="sound.js"></script>
-    <script type="text/javascript" src="script.js"></script>
+    <button id="start-button" class="btn-play">Play</button>
+    <canvas id="canvas" width="600" height="650" style="border: 5px solid black"></canvas>
+    <script type="text/javascript" src="./js/background.js"></script>
+    <script type="text/javascript" src="./js/player.js"></script>
+    <script type="text/javascript" src="./js/platform.js"></script>
+    <script type="text/javascript" src="./js/obstacle.js"></script>
+    <script type="text/javascript" src="./js/gameover.js"></script>
+    <script type="text/javascript" src="./js/score.js"></script>
+    <script type="text/javascript" src="./js/candies.js"></script>
+    <script type="text/javascript" src="./js/sound.js"></script>
+    <script type="text/javascript" src="./js/script.js"></script>
   </div>
 </body>
 </html>
