--- a/game.html
+++ b/game.html
@@ -5,21 +5,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
   <title>Majump Boo</title>
 </head>
-<body>
-  <div id="game-board">
-    <button id="start-button" class="btn-play">Play</button>
-    <canvas id="canvas" width="600" height="650" style="border: 5px solid black"></canvas>
-    <script type="text/javascript" src="./js/background.js"></script>
-    <script type="text/javascript" src="./js/player.js"></script>
-    <script type="text/javascript" src="./js/platform.js"></script>
-    <script type="text/javascript" src="./js/obstacle.js"></script>
-    <script type="text/javascript" src="./js/gameover.js"></script>
-    <script type="text/javascript" src="./js/score.js"></script>
-    <script type="text/javascript" src="./js/candies.js"></script>
-    <script type="text/javascript" src="./js/sound.js"></script>
-    <script type="text/javascript" src="./js/script.js"></script>
+<body id="game-background">
+  <div id="game-board" class="container">
+    <div class="row">
+      <div class="col leftside">
+        <button id="start-button" class="button1"><i class="fas fa-play-circle"></i>Play</button>
+        <button id="mute-button" class="button1"><i class="fas fa-volume-off"></i>On/Off</button>
+        <p class="lefttext">Muévete <i class="far fa-arrow-alt-circle-left"></i>izquierda o derecha<i class="far fa-arrow-alt-circle-right"></i><br>Reinicia con la barra de espacio.</p>
+      </div>
+      <div class="col">
+        <canvas id="canvas" width="600" height="650" style="border: 5px solid black"></canvas>
+        <script type="text/javascript" src="./js/background.js"></script>
+        <script type="text/javascript" src="./js/player.js"></script>
+        <script type="text/javascript" src="./js/platform.js"></script>
+        <script type="text/javascript" src="./js/obstacle.js"></script>
+        <script type="text/javascript" src="./js/gameover.js"></script>
+        <script type="text/javascript" src="./js/score.js"></script>
+        <script type="text/javascript" src="./js/candies.js"></script>
+        <script type="text/javascript" src="./js/sound.js"></script>
+        <script type="text/javascript" src="./js/script.js"></script>
+      </div>
   </div>
 </body>
 </html>
