--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
   <title>Majump Boo</title>
   
 </head>
 <body id="cover">
-    <h1>Majump Boo</h1>
-    <p>Majin Boo ha convertido a todos los namekianos en pastelitos!<br> Ayúdale a comerse tantos como pueda antes de que el planeta se derrumbe.<br>
+    <h1 class="gameTitle">Majump Boo</h1>
+    <p class="textindex">Majin Boo ha convertido a todos los namekianos en pastelitos!<br> Ayúdale a comerse tantos como pueda antes de que el planeta se derrumbe.<br>
       Cuidado! No todas las plataformas aguantarán el peso de Majin Boo dos veces seguidas...</p>
-    <p>Muévete hacia la izquierda/derecha con las flechas del teclado.<br>
-    <p>Cada plataforma saltada da 1 punto, y cada pastelito 5 puntos!</p>
-    <a href="game.html">StartGame</a>
+   
+    <p class="textindex">Cada plataforma saltada suma 1 punto, y cada pastelito 5 puntos!</p>
+    <a class="startbtn" href="game.html">StartGame</a>
 </body>
 </html>
