--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 </head>
 <body id="cover">
     <h1 class="gameTitle">Majump Boo</h1>
-    <p class="textindex">Majin Boo ha convertido a todos los namekianos en pastelitos!<br> Ayúdale a comerse tantos como pueda antes de que el planeta se derrumbe.<br>
-      Cuidado! No todas las plataformas aguantarán el peso de Majin Boo dos veces seguidas...<br><br>Cada plataforma saltada suma 1 punto, y cada pastelito 5 puntos!</p>
+    <p class="textindex">¡Majin Boo ha convertido a todos los namekianos en pastelitos!<br> Ayúdale a comerse tantos como pueda antes de que el planeta se derrumbe.<br>
+      ¡Cuidado! No todas las plataformas aguantarán el peso de Majin Boo dos veces seguidas...<br><br>¡Cada plataforma saltada suma 1 punto, y cada pastelito 5 puntos!</p>
     <a class="startbtn" href="game.html">Start Game</a>
 </body>
 </html>
