--- a/game.html
+++ b/game.html
@@ -16,7 +16,7 @@
       <div class="col leftside">
         <button id="start-button" class="button1"><i class="fas fa-play-circle"></i>Play</button>
         <button id="mute-button" class="button1"><i class="fas fa-volume-off"></i>On/Off</button>
-        <p class="lefttext">Muévete <i class="far fa-arrow-alt-circle-left"></i>izquierda o derecha<i class="far fa-arrow-alt-circle-right"></i><br>Reinicia con la barra de espacio.</p>
+        <p class="lefttext">Move <i class="far fa-arrow-alt-circle-left"></i>left or right<i class="far fa-arrow-alt-circle-right"></i><br>Restart with space bar.</p>
       </div>
       <div class="col">
         <canvas id="canvas" width="600" height="650" style="border: 5px solid black"></canvas>
